# oop-labs

./: README.md
BullAndCows/src/: Main.java  NumberGenerator.java  NumberGuesser.java
BullAndCows/src/exceptions/: InvalidLengthException.java  LettersInNumberException.java  RepeatingNumbersException.java
Calculator/: README.md
Calculator/src/: Main.java  MyTest.java  input.txt
Calculator/src/commands/: Addition.java  Command.java  CommandFactory.java  Comment.java  Define.java  Division.java  Multiplication.java  Pop.java  Print.java  Push.java  Sqrt.java  Subtraction.java  command.properties
Calculator/src/exceptions/: UndefinedVariableException.java  UnsupportedComandNameException.java  UnsupportedDefineNameException.java  UnsupportedScanTypeException.java  ValueDefineException.java
Calculator/src/main/: ExecutionContext.java
game/: README.md
game/Game/src/: Game.java  Main.java  SetUp.java  Start.java
game/Game/src/tools/: Config.java  ImagePanel.java  Token.java  config.properties
game/match3/src/: Board.java  Match3.java
lab1/: CMakeLists.txt
lab2/: CMakeLists.txt
lab2/src/: GameOfLife.cpp  GameOfLife.hpp  main.cpp
